--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --outDir ./dist",
-    "prod": "pnpm build && sh scripts/build.sh",
-    "exe": "./runtime/qjs dist/index.js world",
-    "dev": "pnpm prod && pnpm exe"
+    "build": "rimraf dist && rollup -c rollup.config.mjs",
+    "prod": "pnpm build && sh scripts/build.sh"
   },
   "repository": {
     "type": "git",
@@ -23,7 +21,11 @@
   },
   "homepage": "https://github.com/malcolmyu/VSCodeWithAJ#readme",
   "dependencies": {
-    "@eslint/create-config": "^0.4.6"
+    "@eslint/create-config": "^0.4.6",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.29.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-ts": "^3.4.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.0",
